# AI-Event-Traffic-Command-Center

./: .gitignore  .pre-commit-config.yaml  AI_AGENT_RULES.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOUNDATION_SETUP_PROMPT.md  IMPLEMENTATION_ROADMAP.md  Makefile  PRODUCT_REQUIREMENTS.md  PROJECT_CONTEXT.md  README.md  Second_Round_overview.txt  TODO.md  docker-compose.yml  generate_advanced_notebooks.py  generate_final_notebooks.py  generate_structure.py  pyproject.toml  pytest.ini  pytest_failures.txt  render.yaml  requirements.txt  scaffold_tests.py
.dvc/: config
backend/: run.py
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: run_e2e_tests.py
configs/: logging.yaml  settings.yaml
data/: processed.dvc  raw.dvc
data_pipeline/dataset_builder/: builder.py
data_pipeline/feature_engineering/: feature_generator.py
data_pipeline/ingestion/: data_loader.py
data_pipeline/preprocessing/: cleaner.py
data_pipeline/spatial_clustering/: dbscan_reconstructor.py
data_pipeline/validation/: data_validator.py
docs/: AI_COPILOT_ARCHITECTURE.md  DEVELOPMENT_GUIDELINES.md  ML_ARCHITECTURE.md  PROJECT_STRUCTURE.md  SYSTEM_CAPABILITIES.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
notebooks/: ML_SYSTEM_ARCHITECTURE_PLAN.md  config.py
scripts/: generate_notebooks_stage1.py  generate_notebooks_stage1_part2.py  generate_notebooks_stage1_part3.py  generate_notebooks_stage2.py  generate_notebooks_stage3.py  render_build.sh  run_quality_gate.py  start_dev.bat  start_dev.sh  validate_ml_artifacts.py
(+272 files in other folders)
