[tool.poetry]
name = "gridwise-ai"
version = "0.1.0"
description = "GRIDWISE AI Platform"
authors = ["Admin <admin@gridwise.ai>"]
readme = "README.md"
packages = [{include = "app", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.30.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
structlog = "^24.1.0"
loguru = "^0.7.2"
redis = "^5.0.1"
pandas = "^2.2.0"
geopandas = "^0.14.3"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
xgboost = "^2.0.3"
lightgbm = "^4.1.0"
joblib = "^1.3.2"
pyarrow = "^15.0.0"
shap = "^0.44.0"
folium = "^0.15.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "F403"]


[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
